# NSPL

./: .gitmodules  CMakeLists.txt  README.md  build.sh
include/: nspl.hpp
include/nspl/: Application.hpp
include/nspl/common/: Logger.h
include/nspl/event/: Event.h  EventVisitor.h
include/nspl/window/: Window.hpp  WindowDesc.hpp
src/: Application.cpp  Event.cpp  Logger.cpp  Window.cpp  main.cpp
